[tool.poetry]
name = "language-modeling"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.2.0"
transformers = "^4.47.1"
huggingface-hub = "^0.27.0"
torch = "^2.5.1"
accelerate = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
